Bug 134660 - Listbox not bounded with initial toggle active Tools -> Options -> View 'Show Preview of Fonts'
Summary: Listbox not bounded with initial toggle active Tools -> Options -> View 'Sho...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-08 15:07 UTC by V Stuart Foote
Modified: 2020-08-03 09:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screen clip of lb on first launch after toogle enabled (31.42 KB, image/png)
2020-07-08 15:07 UTC, V Stuart Foote
Details
how it looks for me under gen (2.48 MB, video/webm)
2020-07-10 10:47 UTC, Caolán McNamara
Details
screen cast showing incorrect bounds for Font combobox on first opening of list after changing option to show font preview (2.24 MB, video/mp4)
2020-07-10 13:48 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2020-07-08 15:07:06 UTC
Created attachment 162812 [details]
screen clip of lb on first launch after toogle enabled

when toggling enabled the font preview listbox, first showing is not correctly bounded.  Subsequent display of the listbox of previews is correct.
Comment 1 V Stuart Foote 2020-07-08 15:30:32 UTC
Recent TB77 daily 2020-07-08
Version: 7.1.0.0.alpha0+ (x64)
Build ID: f1e2e69b9b31b42ed9b8a46778c05dc36ff8edcf
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

includes the https://gerrit.libreoffice.org/c/core/+/97972 patch for bug 134479
Comment 2 Caolán McNamara 2020-07-10 10:47:49 UTC
Created attachment 162875 [details]
how it looks for me under gen

is this still a problem?, here's how it works for me which seems about right
Comment 3 V Stuart Foote 2020-07-10 13:48:32 UTC
Created attachment 162881 [details]
screen cast showing incorrect bounds for Font combobox on first opening of list after changing option to show font preview

No still happening for me. 

Affects only the toolbar lb instance on just *initial* opening of the listbox when enabling 'Show preview of fonts' option. Subsequent launches show full width with decoration (borders and scroll bar). Screen cast attached...

Strangely no issue when going the opposite direction of disabling the previews--the toolbar lb gets its full decoration.

On Windows 10 64-bit en-US (1904) with intel HD Graphics 620.
Version: 7.1.0.0.alpha0+ (x64)
Build ID: c5b985bc9bd8d56fb012260cb1685a617261e7fc
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded 

And, default GDI rendering (both CPU or HA) shows same behavior of the Toolbar listbox.
Comment 4 QA Administrators 2020-07-11 03:43:14 UTC Comment hidden (obsolete)
Comment 5 Caolán McNamara 2020-07-28 15:13:43 UTC
The detection of the mode change is done in the focus-in handler, so if the setting it toggled and a popup triggered without changing focus to the combobox the old setting is still in operation and things go awry
Comment 6 Commit Notification 2020-07-28 20:19:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9b2dce4518db89cadbd54a34d1f6375128c3c8a6

Resolves: tdf#134660 listen for 'ShowFontBoxWYSIWYG' config changes

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2020-07-28 20:20:13 UTC
fixed in master, backport to 7-0 in gerrit
Comment 8 V Stuart Foote 2020-07-29 13:31:24 UTC
Thanks Caolán, Confirmed fixed with 2020-07-29 TB77 build of master.

Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded


which is, until bug 135133 gets corrected, listed in program/version.ini as 

buildid=5f665a855ef26faea4dfa2ac427685b60545e8b8
Comment 9 Commit Notification 2020-08-03 09:30:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/4609af887e1fa2896e51cfe2f4c9f2d2201f7785

Resolves: tdf#134660 listen for 'ShowFontBoxWYSIWYG' config changes

It will be available in 7.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.