Resolves: tdf#134660 listen for 'ShowFontBoxWYSIWYG' config changes

instead of checking for changes to them when the fontbox get focus, its now too
late at that point to update ComboBox WYSIWYG mode

Change-Id: Ieea6a4c00be2eb46909d46af29ddd615fff002d5